[package]
name = "simledger-cli"
version = "0.1.0"
authors = ["int1h@icloud.com"]
edition = "2018"

description = "Transaction replay ledger library"

repository = "https://github.com/c8c78cf6c6/3ae0a60426.git"
readme = "../README.md"

[dependencies]
csv-async = { version = "1.2.0-beta1", git = "https://github.com/gwierzchowski/csv-async.git", features = ["tokio"] }
serde = "1.0.123"
serde_derive = "1.0.123"
simledger = { version = "0.1.0", path = "../lib" }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.3"

